[gd_scene load_steps=16 format=3 uid="uid://si7trehpl43g"]

[ext_resource type="Script" path="res://scripts/coin.gd" id="1_aadkq"]
[ext_resource type="Script" path="res://scripts/functions.gd" id="1_m6er7"]
[ext_resource type="Script" path="res://scripts/time.gd" id="1_v1mg0"]
[ext_resource type="Environment" uid="uid://b0lp0dseep050" path="res://shaders/environment.tres" id="2_v3dmk"]
[ext_resource type="PackedScene" uid="uid://c8qi8n3fuqayb" path="res://models/coin.gltf" id="3_cc5wa"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_amnei"]
friction = 0.75
bounce = 0.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xdcy8"]
margin = 10.0
height = 0.12
radius = 0.4

[sub_resource type="Animation" id="Animation_t74g2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y46ai"]
resource_name = "heads"
length = 0.75
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.733333),
"transitions": PackedFloat32Array(1, 2, 1, 0.5, -0.5),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(-1.5708, 0, 0), Vector3(-6.28319, 0, 0), Vector3(1.0472, 0, 0)]
}

[sub_resource type="Animation" id="Animation_w0i5a"]
resource_name = "tails"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(-2, 0.5, 0.5),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.2, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(3.14159, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xmewy"]
_data = {
"RESET": SubResource("Animation_t74g2"),
"heads": SubResource("Animation_y46ai"),
"tails": SubResource("Animation_w0i5a")
}

[sub_resource type="PlaneMesh" id="PlaneMesh_nmusr"]
size = Vector2(10, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_13qff"]
size = Vector3(10, 1, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_0suqn"]
size = Vector3(10, 0.1, 10)

[sub_resource type="SphereShape3D" id="SphereShape3D_vf8g7"]
radius = 6.5

[node name="main" type="Node"]

[node name="cycle" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.438371, 0.898794, 0, -0.898794, 0.438371, 0, 0, 0)
light_bake_mode = 0
shadow_enabled = true
sky_mode = 1
script = ExtResource("1_v1mg0")

[node name="camera" type="Camera3D" parent="."]
transform = Transform3D(-1, -5.16436e-08, 1.4189e-07, 0, 0.939693, 0.34202, -1.50996e-07, 0.34202, -0.939693, 0, 3, -4)
current = true
fov = 50.0

[node name="coin" type="RigidBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
input_capture_on_drag = true
axis_lock_linear_x = true
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_amnei")
gravity_scale = 2.5
max_contacts_reported = 20
contact_monitor = true
sleeping = true
constant_force = Vector3(0, 5, 0)
constant_torque = Vector3(0, 5, 0)
script = ExtResource("1_m6er7")

[node name="model" parent="coin" instance=ExtResource("3_cc5wa")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
skeleton = NodePath("../..")
script = ExtResource("1_aadkq")

[node name="collision" type="CollisionShape3D" parent="coin"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0.06, 0)
shape = SubResource("CylinderShape3D_xdcy8")

[node name="animation" type="AnimationPlayer" parent="coin"]
libraries = {
"": SubResource("AnimationLibrary_xmewy")
}

[node name="base" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_nmusr")

[node name="floor" type="StaticBody3D" parent="base"]

[node name="down" type="CollisionShape3D" parent="base/floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_13qff")

[node name="floor" type="Area3D" parent="base/floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
gravity = 32.0

[node name="collision" type="CollisionShape3D" parent="base/floor/floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.06, -0.5)
shape = SubResource("BoxShape3D_0suqn")

[node name="center" type="Area3D" parent="base/floor/floor/collision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 1.75)
gravity_space_override = 3
gravity_point = true
gravity_point_center = Vector3(0, -3, 0)
gravity_direction = Vector3(0, -3, 0)
gravity = 12.5

[node name="circle" type="CollisionShape3D" parent="base/floor/floor/collision/center"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
shape = SubResource("SphereShape3D_vf8g7")

[node name="up" type="CollisionShape3D" parent="base/floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00868177, 10.5347, -0.0147922)
shape = SubResource("BoxShape3D_13qff")

[node name="world" type="WorldEnvironment" parent="."]
environment = ExtResource("2_v3dmk")

[node name="mass" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[node name="debug" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="countdown" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Button2" type="Button" parent="."]
offset_right = 64.0
offset_bottom = 32.0
text = "GOLD"

[node name="flip" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "FLIP COIN"

[connection signal="body_entered" from="base/floor/floor" to="coin" method="_on_area_3d_body_entered"]
[connection signal="timeout" from="mass" to="coin" method="_on_mass_timeout"]
[connection signal="timeout" from="timer" to="coin" method="_on_timer_timeout"]
[connection signal="timeout" from="debug" to="coin" method="_on_debug_timeout"]
[connection signal="timeout" from="countdown" to="cycle" method="_on_countdown_timeout"]
[connection signal="pressed" from="Button2" to="coin/model" method="_on_button_2_pressed"]
[connection signal="pressed" from="flip" to="coin" method="_on_flip_pressed"]
